--- a/app/public/campaigndetails/index.html
+++ b/app/public/campaigndetails/index.html
@@ -41,7 +41,7 @@
               <p>
                 <b>80 supporters</b> out of 200
               </p>
-              <h2 id="expire">Campaign expires: Date</h2>
+              <h2 id="expire"></h2>
             </div>
           </div>
         </div>
@@ -88,15 +88,11 @@
             </ol>
           </div>
           <div class="col-md-4 col-md-offset-1 panel infocard">
-            <h3>Percentage of Mutual Funds Investment</h3>
+            <h3 id="blurb">Percentage of Your Mutual Funds Investment</h3>
             <ul>
               <li id = "ticker">
                 <!-- stock 1 ticker : Value -->
               </li>
-
-            </ul>
-            <h3>Total Stock Shares</h3>
-            <ul>
               <li id = 'share'>
                 <!-- stock 1 ticker : Value -->
               </li>
