--- a/app/public/search/index.html
+++ b/app/public/search/index.html
@@ -68,6 +68,7 @@
 
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src='http://momentjs.com/downloads/moment.js'></script>
   <script src="public/search/script.js"></script>
 
 </html>
