--- a/app/public/campaigndetails/index.html
+++ b/app/public/campaigndetails/index.html
@@ -150,6 +150,8 @@
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src='http://momentjs.com/downloads/moment.js'></script>
   <script type='text/javascript' src='/public/campaigndetails/script.js'></script>
+
 
 </html>
