--- a/app/public/campaigndetails/index.html
+++ b/app/public/campaigndetails/index.html
@@ -67,9 +67,7 @@
                  This makes it difficult for competitors
                  to produce anything comparable at all.
             </p>
-            <iframe width="420" height="315"
-            src="https://www.youtube.com/watch?v=Wcvb0Ip-Aac">
-            </iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/Wcvb0Ip-Aac" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <div id="my-row" class="row">
